# notion

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
examples/todo/commands/: configure.rs
src/: lib.rs
src/models/: block.rs  error.rs  mod.rs  properties.rs  search.rs  tests.rs  text.rs  users.rs
src/models/block/: tests.rs
src/models/block/tests/: callout.json  file_object.json  file_page.json  heading_1.json  icon_object.json
src/models/properties/: tests.rs
src/models/tests/: page.json  query_result.json  search_results.json
