[package]
name = "notion"
version = "0.5.3"
authors = [
  "Jake Swenson <jake@jakeswenson.com>",
  "Erik McClure <erikm@fundament.software>",
]
edition = "2021"
repository = "https://github.com/fundament-software/notion"
readme = "README.md"

description = "A Notion Api Client, except it actually works"
license = "MIT"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
time = { version = "0.3.36", features = [
  "serde",
  "serde-human-readable",
  "parsing",
  "formatting",
] }

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
cargo-husky = "1"
wiremock = "0.5.2"
anyhow = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5"
toml = "0.7.2"

[target.'cfg(not(windows))'.dependencies]
skim = "0.10.4"

[dev-dependencies.config]
version = "0.13.3"
features = ["toml"]
